assets/css/main.css
html, body {
  height: 100%;
  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

body {
  padding-top: 50px;
}

a {
  color: #ef5350;
}

a:hover {
  color: #ef5350;
}

h2 {
  font-weight: 300;
}

.navbar {
  background-color: #ef5350;
  min-height: 56px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12),0 3px 1px -2px rgba(0,0,0,.2);
}

.navbar a {
  color: #FFF;
}

.navbar-nav li a {
  padding-top: 18px;
}

.navbar-brand {
  padding-top: 18px;
}

.nav li a:hover {
  background-color: transparent;
  color: rgba(255,255,255,.8);
}

.nav>li>a:focus {
  background-color: transparent;
}


#wrap {
  min-height: 100%;
}

#main {
  overflow:auto;
  padding-bottom:60px; /* this needs to be bigger than footer height*/
}

.start-jumbo {
  color: #EEE;
  padding: 60px 15px;
  text-align: center;
  background-image: url('../images/header.jpg');
}

section.jumbo {
  height: 180px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: #FFF;
  background-image: url('../images/header.jpg');
}

section.page-section {
  margin: 50px 0;
}

section {
  color: #333;
  font-size: 16px;
  line-height: 25.6px;
}

.blog-post {
  margin-bottom: 50px;
}

.blog-post img {
  width: 130%;
  margin-left: -15%;
  margin-top: 30px;
  margin-bottom: 30px;
}

.blog-post .narrow-images img {
  width: auto;
  height: auto;
  max-width: 95%;
  margin: 15px 0;
  border: 1px solid rgba(0, 0, 0, 0.50);
}

.blog-post-nav {
  margin-top: 20px;
}

.footer {
  position: relative;
  margin-top: -60px; /* negative value of footer height */
  height: 60px;
  clear:both;
  padding-top:20px;
}

footer {
  background-color: #333;
  color: #EEE;
}

footer a {
  color: #AAA;
}

footer a:hover {
  text-decoration: none;
  color: #CCC;
}

footer span {
  padding-right: 20px;
}

